[package]
name = "dx_todo"
version = "0.1.0"
authors = ["YotaroMatsui <b10matsuwo.10.madscience@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = { version = "1.0.0", features = ["wasm-bindgen"] }
dioxus = { version = "0.6.1", features = ["fullstack","router"] }
log = "0.4.22"
rusqlite ={version = "0.32.1", optional = true} 
serde = { version = "1.0.217", features = ["derive"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "rusqlite"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
